# orthoshapelab

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: run_example.py
orthoshapelab/: __init__.py  mesh_loader.py  pca_model.py  viewer.py
tests/: test_pca.py
