[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orthoshapelab"
version = "0.1.1"
description = "Interactive PCA viewer for 3D statistical shape models"
authors = [{name="Prabhat Tiwari"}]
requires-python = ">=3.8"

dependencies = [
    "open3d",
    "numpy",
    "scikit-learn"
]

[project.scripts]
orthoshapelab = "orthoshapelab.viewer:run"